--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,19 @@
-HELLO SUDOKU!!111one
+<div id='sudoku'>
+  <% 3.times do |row| %>
+    <div class='row'>
+      <% 3.times do |box| %>
+        <div class='box'>
+          <% 3.times do |cell_row| %>
+            <div class='cell-row'>
+              <% 3.times do |cell| %>
+                <div class='cell'>
+                  <input type="text" name="" id="" value="" />
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
