--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,8 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" href="/stylesheets/app.css" type="text/css" />
-  <title>title</title>
-  
+  <title>sudoku</title>
 </head>
   
 <body>
