--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
+<h1>Sudoku</h1>
+
 <div id='sudoku'>
   <% 3.times do |row| %>
     <div class='row'>
@@ -7,7 +9,10 @@
             <div class='cell-row'>
               <% 3.times do |cell| %>
                 <div class='cell'>
-                  <input type="text" name="" id="" value="" />
+                  <% cell_index = row * 27 + box * 3 + cell_row * 9 + cell %>
+                  <% cell_value = @current_solution[cell_index] %>
+                  <input type="text" maxlength='1'
+                   autocomplete='off' value=<%= cell_value %>>
                 </div>
               <% end %>
             </div>
