--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 <h1>Sudoku</h1>
+<h2>It may be completely non-functional, but <i>damn</i> is this a beautiful font</h2>
 
 <div id='sudoku'>
   <% 3.times do |row| %>
@@ -10,7 +11,7 @@
               <% 3.times do |cell| %>
                 <div class='cell'>
                   <% cell_index = row * 27 + box * 3 + cell_row * 9 + cell %>
-                  <% cell_value = @current_solution[cell_index] %>
+                  <% cell_value = @current_puzzle[cell_index] %>
                   <input type="text" maxlength='1'
                    autocomplete='off' value=<%= cell_value %>>
                 </div>
