--- a/views/index.erb
+++ b/views/index.erb
@@ -29,6 +29,6 @@
 <input type="submit" value="Check solution" />
 </form>
 
-<form action="/solution" method="get" accept-charset="utf-8">
-  <input type="submit" value="Show solution" />
+<form action="/" method="get" accept-charset="utf-8">
+  <button type="submit" name='solution'>Show solution</button>
 </form>
