--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <h1>Sudoku</h1>
-<h2>It may be completely non-functional, but <i>damn</i> is this a beautiful font</h2>
+<h2>It does sudoku. Whaddaya want, blood?</h2>
 
 <form action="/" method="post">
 <div id='sudoku'>
@@ -26,7 +26,7 @@
     </div>
   <% end %>
 </div>
-<button type="submit">Check solution</button>
+  <button name="check" type="submit">Check solution</button>
 </form>
 
 <form action="/" method="get" accept-charset="utf-8">
