warnign abotu multiple solutions

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -47,7 +47,7 @@ button[name="check"] {
 
 button[name="solution"] {
   display: inline-block;
-
+}
 
 button[name="new"] {
   /*margin-left: 400px;*/
