--- a/views/index.erb
+++ b/views/index.erb
@@ -33,6 +33,9 @@
   <button type="submit" name='solution'>Show solution</button>
 </form>
 
+<p>Warning: currently generates sudoku with 
+  multiple solutions. Being worked on.</p>
+
 <form action="/" method="get" accept-charset="utf-8">
   <button type="submit" name='new'>Generate new puzzle</button>
 </form>
