dont know how to play advice

--- a/views/index.erb
+++ b/views/index.erb
@@ -39,3 +39,5 @@
 <form action="/" method="get" accept-charset="utf-8">
   <button type="submit" name='new'>Generate new puzzle</button>
 </form>
+
+<h4>Don't know how to play? Try Google&trade;</h4>
