--- a/views/index.erb
+++ b/views/index.erb
@@ -29,14 +29,14 @@
   <button name="check" type="submit">Check solution</button>
 </form>
 
-<form action="/" method="get" accept-charset="utf-8">
+<form action="/" method="post" accept-charset="utf-8">
   <button type="submit" name='solution'>Show solution</button>
 </form>
 
 <p>Warning: currently generates sudoku with 
   multiple solutions. Being worked on.</p>
 
-<form action="/" method="get" accept-charset="utf-8">
+<form action="/" method="post" accept-charset="utf-8">
   <button type="submit" name='new'>Generate new puzzle</button>
 </form>
 
