--- a/views/index.erb
+++ b/views/index.erb
@@ -29,12 +29,14 @@
   <button name="check" type="submit">Check solution</button>
 </form>
 
-<form action="/" method="post" accept-charset="utf-8">
-  <button type="submit" name='solution'>Show solution</button>
-</form>
+<div id="secondrow_buttons">
+  <form action="/" method="post" accept-charset="utf-8">
+    <button type="submit" name='solution'>Show solution</button>
+  </form>
 
-<form action="/" method="post" accept-charset="utf-8">
-  <button type="submit" name='new'>Generate new puzzle</button>
-</form>
+  <form action="/" method="post" accept-charset="utf-8">
+    <button type="submit" name='new'>Generate new puzzle</button>
+  </form>
+</div>
 
 <h4>Don't know how to play? Try Google&trade;</h4>
