--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -48,6 +48,7 @@ button {
   background-color:transparent;
   border: 2px solid black;
   border-radius:20px;
+  padding: 5px 10px;
 }
 
 button[name="check"] {
