--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" href="/stylesheets/app.css" type="text/css" />
+  <% if night_mode %>
+    <link rel="stylesheet" href="/stylesheets/night.css" type="text/css" />
+  <% end %>
   <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic' rel='stylesheet' type='text/css'>
   <title>sudoku</title>
 </head>
