--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,8 @@
                   <% colour_class = colour_class(@check_solution, @puzzle[cell_index], \
                      @proposed_solution[cell_index], @solution[cell_index])  %>
                   <input class="<%= colour_class %>" name='cell[]' type="text" maxlength='1'
-                   autocomplete='off' value="<%= cell_value %>">
+                  autocomplete='off' value="<%= cell_value %>" 
+                  <%= "readonly" if @puzzle[cell_index].to_i != 0 %> >
                 </div>
               <% end %>
             </div>
