--- a/views/index.erb
+++ b/views/index.erb
@@ -42,7 +42,7 @@
 <h4>Don't know how to play? Try Google&trade;</h4>
 
 <form action="/" method="post" id="night">
-  <button type="submit" name="night">
+  <button id="night" type="submit" name="night">
     <%= night_mode ? 'Day' : 'Night' %> mode
   </button>
 </form>
