--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,5 +13,7 @@
   
 <body>
   <%= yield %>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="javascript/application.js" type="text/javascript"></script>
 </body>
 </html>
