night mode transitions

--- a/views/index.erb
+++ b/views/index.erb
@@ -39,7 +39,7 @@
   </form>
 </div>
 
-<h4>Don't know how to play? Try Google&trade;</h4>
+<h4><a href="http://lmgtfy.com/?q=how+do+I+play+sudoku">Don't know how to play? Try Google&trade;</a></h4>
 
 <form action="/" method="post" id="night">
   <button id="night" type="submit" name="night">
