night mode remembered within a session

--- a/views/index.erb
+++ b/views/index.erb
@@ -41,7 +41,7 @@
 
 <h4><a href="http://lmgtfy.com/?q=how+do+I+play+sudoku">Don't know how to play? Try Google&trade;</a></h4>
 
-<form action="/" method="post" id="night">
+<form action="/night" method="post" id="night">
   <button id="night" type="submit" name="night">
     <%= night_mode ? 'Day' : 'Night' %> mode
   </button>
